# FlixPredix_Movie_Prediction

./: .gitignore  README.md  package-lock.json
Admin/: .env.development  .env.production  package-lock.json  package.json
Admin/backend/: index.js
Admin/backend/db/: sample.db
Admin/src/: App.vue
Admin/src/assets/: BudgetGraph.ts
Admin/src/components/: FeaturesDisplay.vue  FileUpload.vue  Header.vue
Admin/src/router/: index.js
Admin/src/views/: AnalyticsView.vue  ManageView.vue  TrainView.vue
FlixPredix/flixpredix-app/: .env.production  package-lock.json  package.json
FlixPredix/flixpredix-app/src/: App.vue  main.js
FlixPredix/flixpredix-app/src/components/: BudgetSlide.vue  GenreSelect.vue  RegionSelect.vue  RunTimeSelect.vue
FlixPredix/flixpredix-app/src/router/: index.js
FlixPredix/flixpredix-app/src/views/: AboutView.vue  CredentialsPage.vue  FrontPage.vue  HomeView.vue  StartPage.vue
Model/: .dockerignore  Dockerfile  pyproject.toml
Model/data/: normalize.py
Model/models/: models.json
Model/scripts/: commit_model.py  normalize_data.py  test_model.py  train_model.py
Model/server/: __init__.py  databaseSQLite.py  model.py  model_registry.py  relationalSQLite.py
Model/server/router/: admin.py  consumer.py
k8s/: server-deployment.yml  server-loadbalancer.yml
