[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Example Author <example.author@example.com>"]
packages = [
    { include = "server" }
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
